// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`assertAwsCredentialsPresent given: [case1] no AWS credentials configured when: [t0] assertion is called then: it throws BadRequestError with guidance 1`] = `
{
  "errorMessage": "BadRequestError: AWS credentials not configured. genCloudwatchOutlet requires valid AWS credentials.

{
  "hint": "configure credentials via one of:\\n  - env: AWS_ACCESS_KEY_ID + AWS_SECRET_ACCESS_KEY\\n  - env: AWS_PROFILE (for shared credentials or SSO)\\n  - env: AWS_WEB_IDENTITY_TOKEN_FILE + AWS_ROLE_ARN (for EKS/IRSA)\\n  - container: execute in ECS/Fargate with task role\\n  - metadata: execute in EC2/Lambda with instance/execution role"
}",
}
`;

exports[`assertAwsCredentialsPresent given: [case2] env var credentials are configured when: [t0] assertion is called then: it does not throw 1`] = `
{
  "credentialSource": "env-vars",
  "throws": false,
}
`;

exports[`assertAwsCredentialsPresent given: [case3] AWS profile is configured when: [t0] assertion is called then: it does not throw 1`] = `
{
  "credentialSource": "profile",
  "throws": false,
}
`;

exports[`assertAwsCredentialsPresent given: [case4] execution env is configured (Lambda/EC2) when: [t0] assertion is called then: it does not throw 1`] = `
{
  "credentialSource": "execution-env",
  "throws": false,
}
`;

exports[`assertAwsCredentialsPresent given: [case5] container credentials are configured (ECS) when: [t0] assertion is called then: it does not throw 1`] = `
{
  "credentialSource": "container-credentials",
  "throws": false,
}
`;

exports[`assertAwsCredentialsPresent given: [case6] web identity credentials are configured (EKS) when: [t0] assertion is called then: it does not throw 1`] = `
{
  "credentialSource": "web-identity",
  "throws": false,
}
`;
